<resources>
    <string name="app_name">CS-K40</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="new_user_register_now">Đăng ký tài khoản mới</string>
    <string name="person_image">Ảnh người dùng</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="fullname">Tên đầy đủ</string>
    <string name="address">Địa chỉ</string>
    <string name="regex_email">[a-zA-Z0-9._-]+@[a-z]+\\.+[a-z]+</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>